<resources>
    <string name="app_name">Jobify </string>
    <string name="menu_item1">Поиск</string>
    <string name="menu_item2">Новости</string>
    <string name="menu_item3">Профиль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vacancy">Вакансии</string>
    <string name="internships">Стажировки</string>
    <string name="company">Компании</string>
    <string name="hackathon">Хакатоны</string>
    <string name="story">Истории Успеха</string>
    <string name="stack">Популярное</string>
    <string name="title">Title</string>
    <string name="description">Description Description Description</string>
    <string name="salary">Salary:</string>
    <string name="comp">Company:</string>
    <string name="direction">Направления:</string>
    <string name="time">Время:</string>
    <string name="place">Место:</string>
    <string name="labelUsername">Юзернэйм:</string>
    <string name="labelPass">Пароль:</string>
    <string name="welcome">Добро Пожаловать)</string>
    <string name="login">Войти</string>
    <string name="warning">Пожалуйста, заполните!</string>
    <string name="фищге">О себе:</string>
    <string name="contact">Контакты:</string>
    <string name="skills">Навыки:</string>
    <string name="bday">Дата Рождения:</string>
</resources>
