<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">
    <FrameLayout
        android:layout_weight="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_8sdp"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/vacancyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_margin="@dimen/_8sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/welcome"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelUsername"
            android:layout_margin="@dimen/_8sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:hint="@string/labelPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_44sdp"
                android:layout_margin="@dimen/_8sdp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                style="@style/Widget.MaterialComponents.Button.Icon"
            />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>