<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".views.Profile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_12sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp"
                android:text="@string/welcome"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_12sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="normal"
                        android:layout_margin="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/contact"/>
                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/place"/>
                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/place"/>
                    <TextView
                        android:id="@+id/github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/place"/>

                </LinearLayout>
                <ImageView
                    android:id="@+id/picture_view"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="@dimen/_110sdp"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/фищге"/>

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/welcome"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/bday"/>
            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/welcome"/>

            <TextView
                android:id="@+id/univer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/welcome"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/skills"/>
            <TextView
                android:id="@+id/techo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/welcome"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>