<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light2"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_margin="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/vacancyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:text="@string/title"/>
            <TextView
                android:id="@+id/vacancyDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textStyle="italic"
                android:textSize="@dimen/_10sdp"
                android:text="@string/description"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/vacancyCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/comp"/>
                <TextView
                    android:id="@+id/salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/salary"/>
            </LinearLayout>
            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:textStyle="italic"
                android:text="@string/comp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/job_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/comp"/>
                <TextView
                    android:id="@+id/techno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"
                    android:layout_weight="2"
                    android:text="@string/comp"/>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>