<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_margin="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/title"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/direction"/>
                    <TextView
                        android:id="@+id/job_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/time"/>
                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/place"/>
                    <TextView
                        android:id="@+id/place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/title"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/picture_view"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_110sdp"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </LinearLayout>
            <TextView
                android:id="@+id/des"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/title"/>
            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_11sdp"
                android:text="@string/title"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>